<resources>
    <string name="app_name">Richiesta Vendor</string>
    <string name="orders">Orders</string>
    <string name="products">Products</string>
    <string name="branches">Branches</string>
    <string name="users">Users</string>
    <string name="settings">Settings</string>
    <string name="loading">Loading</string>
    <string name="button_ok">OK</string>
    <string name="internet_connection_failed">Internet connection failed</string>
    <string name="no_products">There are no products</string>
    <string name="no_branches">There are no branches</string>
    <string name="sub_sections">Sub Sections</string>
    <string name="no_SubSections">There are no Subsections</string>
    <string name="arabic_name">Arabic name</string>
    <string name="english_name">English name</string>
    <string name="french_name">French name</string>
    <string name="arabic_summary">Arabic summary</string>
    <string name="en_summary">English summary</string>
    <string name="french_summary">French summary</string>
    <string name="arabic_details">Arabic details</string>
    <string name="en_details">English details</string>
    <string name="french_details">French details</string>
    <string name="save">Save</string>
    <string name="add_product">Add product</string>
    <string name="no_orders">no orders</string>
    <string name="no_contents">No contents</string>
    <string name="add_branch">Add a Branch</string>
    <string name="tags">Tags</string>
    <string name="sizes">Sizes</string>
    <string name="colors">Colors</string>
    <string name="additional">Additional</string>
    <string name="exit">Exit</string>
    <string name="field">Field</string>
    <string name="branch_notes">Branch Notes</string>
    <string name="enter_ar_name">Enter arabic name</string>
    <string name="enter_en_name">Enter english name</string>
    <string name="enter_field">Enter field</string>
    <string name="enter_bra_notes">Enter branch notes</string>
    <string name="product_num">Product number</string>
    <string name="product_upc">Product UPC</string>
    <string name="purchase_unit_price">Purchase unit price</string>
    <string name="sales_unit_price">Sales unit price</string>
    <string name="notes">Notes</string>
    <string name="available">Available</string>
    <string name="not_available">Not available</string>
    <string name="enter">Enter</string>
    <string name="bra_add_no_det">The branch has been added but without details</string>
    <string name="some_thng_err">Something error</string>
    <string name="succ_add_bra">Successfully added the branch</string>
    <string name="bra_address">Branch address</string>
    <string name="bra_phone">Branch phone</string>
    <string name="bra_cell">Branch Cell</string>
    <string name="bra_aemail">Branch email</string>
    <string name="store_notes">Stores note</string>
    <string name="no_cities">No cities</string>
    <string name="no_countries">No countries</string>
    <string name="enter_address">Enter branch address</string>
    <string name="enter_phone">Enter branch phone</string>
    <string name="created_by">Created by</string>
    <string name="created_date">Created date</string>
    <string name="modify_by">Modify by</string>
    <string name="modify_date">Modify date</string>
    <string name="city_en">City EN</string>
    <string name="country_en">Country EN</string>
    <string name="country_ar">Country AR</string>
    <string name="city_ar">City AR</string>
    <string name="succe_delete_bra">Successfully deleted the branch</string>
    <string name="sure_delete_bra">Are you sure to delete this branch ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="succ_add_product">Successfully added the product</string>
    <string name="no_cat">No categories</string>
    <string name="categories">Categories</string>
    <string name="failed_add_color">Failed to add the color</string>
    <string name="failed_add_cat">Failed to add the category</string>
    <string name="failed_add_add">Failed to add the addition</string>
    <string name="failed_add_size">Failed to add the size</string>
    <string name="suc_add_color">Successfully add the color</string>
    <string name="suc_add_cat">Successfully added the category</string>
    <string name="suc_add_add">Successfully added the addition</string>
    <string name="suc_add_size">Successfully added the size</string>
    <string name="suc_del_color">Successfully deleted the color</string>
    <string name="suc_del_cat">Successfully deleted the category</string>
    <string name="suc_del_add">Successfully deleted the addition</string>
    <string name="suc_del_size">Successfully deleted the size</string>
    <string name="failed_del_color">Failed to delete the color</string>
    <string name="failed_del_cat">Failed to delete the category</string>
    <string name="failed_del_add">Failed to delete the addition</string>
    <string name="failed_del_size">Failed to delete the size</string>
    <string name="sure_delete_item">Are you sure to delete this item ?</string>
    <string name="add_pr">Add product</string>
    <string name="suc_mod_pro">Successfully modified the product</string>
    <string name="fail_mod_pro">Failed to modified the product</string>
    <string name="suc_del_pro">Successfully deleted the product</string>
    <string name="fail_del_pro">Failed to delete the product</string>
    <string name="sure_delete_pro">Are you sure to delete this product ?</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="auth_error">Phone number or password are wrong</string>
    <string name="login">Login</string>
    <string name="enter_pass">Enter password</string>
    <string name="store">The store</string>
    <string name="main_bra">The main branch</string>
    <string name="storage_per">You have to allow the storage permission to access your media !</string>
    <string name="succ_modify_bra">Successfully Modified the branch</string>
    <string name="failed_modify_bra">Failed to modify the branch!</string>
    <string name="err_upload_img">Error while uploading the image</string>
    <string name="ar_mes_unit">Arabic measurement unit</string>
    <string name="en_mes_unit">English measurement unit</string>
    <string name="enter_measurement_unit">Enter measurement unit</string>
    <string name="price">Price:</string>
    <string name="order_os">SO number :</string>
    <string name="branch">Branch:</string>
    <string name="is_main_bra">Is main branch ?</string>
    <string name="product">Product:</string>
    <string name="qnt">Quantity:</string>
    <string name="color">Color:</string>
    <string name="size">Size:</string>
    <string name="addi">Additional:</string>
    <string name="username">Username:</string>
    <string name="order_note">Order notes:</string>
    <string name="order_date">Order date:</string>
    <string name="total_price">Total price:</string>
    <string name="status">Status:</string>
    <string name="completed">Completed</string>
    <string name="recieved">Received</string>
    <string name="cust_delivered">Customer delivered</string>
</resources>
