<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">

<LinearLayout
    android:id="@+id/root_view"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/RKPrdNameAR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/arabic_name"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/white_solid_prim_stroke"
        android:padding="@dimen/_10sdp"/>

    <EditText
        android:id="@+id/RKPrdNameEN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/white_solid_prim_stroke"
        android:hint="@string/english_name"
        android:padding="@dimen/_10sdp" />

    <EditText
        android:id="@+id/RKPrdDescrAR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/arabic_details"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/white_solid_prim_stroke"
        android:padding="@dimen/_10sdp"/>

    <EditText
        android:id="@+id/RKPrdDescrEN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/en_details"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/white_solid_prim_stroke"
        android:padding="@dimen/_10sdp"/>

    <EditText
        android:id="@+id/mesurment_unit_ar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ar_mes_unit"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/white_solid_prim_stroke"
        android:padding="@dimen/_10sdp"/>

    <EditText
        android:id="@+id/mesurment_unit_en"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/en_mes_unit"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/white_solid_prim_stroke"
        android:padding="@dimen/_10sdp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_solid_prim_stroke"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/branches_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:text="@string/branches"
            android:textSize="@dimen/_10sdp"/>

        <Spinner
            android:id="@+id/RKBranches_Id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/white_solid_prim_stroke"
            android:padding="@dimen/_5sdp"
            android:layout_margin="@dimen/_5sdp"/>

    </LinearLayout>


    <EditText
        android:id="@+id/ProductNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_num"
        android:layout_margin="@dimen/_10sdp"
        android:inputType="number"
        android:background="@drawable/white_solid_prim_stroke"
        android:padding="@dimen/_10sdp"/>

    <EditText
        android:id="@+id/ProductUPC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_upc"
        android:layout_margin="@dimen/_10sdp"
        android:inputType="number"
        android:background="@drawable/white_solid_prim_stroke"
        android:padding="@dimen/_10sdp"/>

    <EditText
        android:id="@+id/PurchaseUnitPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/purchase_unit_price"
        android:layout_margin="@dimen/_10sdp"
        android:inputType="number"
        android:background="@drawable/white_solid_prim_stroke"
        android:padding="@dimen/_10sdp"/>

    <EditText
        android:id="@+id/SalesUnitPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sales_unit_price"
        android:inputType="number"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/white_solid_prim_stroke"
        android:padding="@dimen/_10sdp"/>

    <ImageView
        android:id="@+id/ProductPic"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_margin="@dimen/_10sdp"
        android:src="@drawable/ic_add_a_photo_black_24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_solid_prim_stroke"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="vertical">

    <TextView
        android:id="@+id/categories_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:text="@string/categories"
        android:textSize="@dimen/_10sdp"/>

    <Spinner
        android:id="@+id/RK_Categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/white_solid_prim_stroke"
        android:padding="@dimen/_5sdp"
        android:layout_margin="@dimen/_5sdp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_solid_prim_stroke"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="vertical">

    <TextView
        android:id="@+id/sizes_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:text="@string/sizes"
        android:textSize="@dimen/_10sdp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RK_Size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_solid_prim_stroke"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="vertical">

    <TextView
        android:id="@+id/colors_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:text="@string/colors"
        android:textSize="@dimen/_10sdp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RK_Colors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_solid_prim_stroke"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="vertical">

    <TextView
        android:id="@+id/additionals_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:text="@string/additional"
        android:textSize="@dimen/_10sdp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RK_Additional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"/>

    </LinearLayout>


    <RadioGroup
        android:id="@+id/IsAvailable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@id/available"
        android:orientation="horizontal"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/white_solid_prim_stroke"
        android:theme="@style/MyAlertDialogStyle">

        <RadioButton
            android:id="@+id/available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/available" />

        <RadioButton
            android:id="@+id/not_available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/not_available" />

    </RadioGroup>

    <EditText
        android:id="@+id/RK_Notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/notes"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/white_solid_prim_stroke"
        android:padding="@dimen/_10sdp"/>

    <Button
        android:id="@+id/save"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:padding="@dimen/_10sdp"
        android:layout_margin="@dimen/_20sdp"
        android:textSize="@dimen/_13sdp"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/prim_solid"/>

</LinearLayout>
</androidx.core.widget.NestedScrollView>