<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">

<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/add_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_15sdp"/>


    <EditText
        android:id="@+id/ar_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/arabic_name"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/white_solid_prim_stroke"
        android:padding="@dimen/_10sdp"/>

    <EditText
        android:id="@+id/e_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/arabic_name"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/white_solid_prim_stroke"
        android:padding="@dimen/_10sdp"/>

    <EditText
        android:id="@+id/fr_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/french_name"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/white_solid_prim_stroke"
        android:padding="@dimen/_10sdp"/>

    <EditText
        android:id="@+id/ar_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/arabic_summary"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/white_solid_prim_stroke"
        android:padding="@dimen/_10sdp"/>

    <EditText
        android:id="@+id/english_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/en_summary"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/white_solid_prim_stroke"
        android:padding="@dimen/_10sdp"/>

    <EditText
        android:id="@+id/fr_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/french_summary"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/white_solid_prim_stroke"
        android:padding="@dimen/_10sdp"/>

    <EditText
        android:id="@+id/ar_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/arabic_details"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/white_solid_prim_stroke"
        android:padding="@dimen/_10sdp"/>

    <EditText
        android:id="@+id/e_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/en_details"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/white_solid_prim_stroke"
        android:padding="@dimen/_10sdp"/>

    <EditText
        android:id="@+id/fr_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/french_details"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/white_solid_prim_stroke"
        android:padding="@dimen/_10sdp"/>

    <Button
        android:id="@+id/save"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:padding="@dimen/_10sdp"
        android:layout_margin="@dimen/_20sdp"
        android:textSize="@dimen/_13sdp"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/prim_solid"/>

</LinearLayout>
</androidx.core.widget.NestedScrollView>