<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/ar_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/white_solid_prim_stroke"
        android:hint="@string/arabic_name"
        android:padding="@dimen/_10sdp" />

    <EditText
        android:id="@+id/e_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/white_solid_prim_stroke"
        android:hint="@string/english_name"
        android:padding="@dimen/_10sdp" />

    <EditText
        android:id="@+id/notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/white_solid_prim_stroke"
        android:gravity="start"
        android:hint="@string/notes"
        android:lines="3"
        android:padding="@dimen/_10sdp" />


    <Button
        android:id="@+id/save"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/_20sdp"
        android:background="@drawable/prim_solid"
        android:padding="@dimen/_10sdp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp" />


</LinearLayout>