<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

  <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/white"
      android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

      <ImageView
          android:id="@+id/logo"
          android:layout_width="@dimen/_150sdp"
          android:layout_height="@dimen/_150sdp"
          android:layout_marginBottom="@dimen/_30sdp"
          android:layout_marginTop="@dimen/_10sdp"
          app:srcCompat="@drawable/logoicon" />

      <TextView
          android:id="@+id/phone_title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/_10sdp"
          android:layout_marginRight="@dimen/_10sdp"
          android:text="@string/phone"
          android:textSize="@dimen/_15sdp" />

      <EditText
          android:id="@+id/phone"
          android:layout_width="match_parent"
          android:layout_height="@dimen/_31sdp"
          android:layout_margin="@dimen/_10sdp"
          android:background="@drawable/white_solid__accent_stroke"
          android:paddingLeft="3dp"
          android:paddingRight="3dp"
          android:inputType="phone"
          android:textColor="@color/black"
          android:textSize="@dimen/_15sdp" />

      <TextView
          android:id="@+id/password_title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/_10sdp"
          android:layout_marginRight="@dimen/_10sdp"
          android:text="@string/password"
          android:textSize="@dimen/_15sdp" />

      <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
          android:id="@+id/password"
          android:layout_width="match_parent"
          android:layout_height="@dimen/_31sdp"
          android:layout_margin="@dimen/_10sdp"
          android:background="@drawable/white_solid__accent_stroke"
          android:paddingLeft="3dp"
          android:paddingRight="3dp"
          android:textColor="@color/black"
          android:textSize="@dimen/_15sdp"
          app:drawable_show="@drawable/ic_custom_hide"
          app:drawable_hide="@drawable/ic_custom_show" />

      <Button
          android:id="@+id/btn_login"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/_17sdp"
          android:background="@drawable/prim_solid"
          android:text="@string/login"
          android:textColor="@color/white"
          android:textSize="@dimen/_18sdp" />

    </LinearLayout>

  </androidx.core.widget.NestedScrollView>

  <ProgressBar
      android:id="@+id/progress"
      android:layout_width="@dimen/_100sdp"
      android:layout_height="@dimen/_100sdp"
      android:layout_gravity="center"
      android:padding="@dimen/_10sdp"
      android:theme="@style/MyAlertDialogStyle"
      android:visibility="gone"
      android:background="@drawable/accent_solid"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
